[gd_scene load_steps=8 format=2]

[ext_resource path="res://entities/player/Player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/Player.png" type="Texture" id=2]
[ext_resource path="res://entities/player/PlayerCollider.tres" type="Shape2D" id=3]
[ext_resource path="res://weapons/guns/ring/RingGun.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/Hurtbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://entities/player/MouseHelper.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 11 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = ExtResource( 3 )

[node name="Hurtbox" parent="." instance=ExtResource( 5 )]
position = Vector2( 0, 12 )
collision_layer = 8

[node name="Collider" parent="Hurtbox" index="0"]
position = Vector2( 0, -12 )
shape = SubResource( 1 )

[node name="RingGun" parent="." instance=ExtResource( 4 )]
rotation = -1.57079
MASK_BIT = 4

[node name="JumpDelayTimer" type="Timer" parent="."]
wait_time = 0.06
one_shot = true

[node name="MouseHelper" parent="." instance=ExtResource( 6 )]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]

[editable path="Hurtbox"]

[editable path="RingGun"]
